feat: add api crud tickets
