# src/index.ts
@@ -17,7 +17,7 @@ async function init() {
 
     app.use(bodyParser.json())
 
-    const PORT = 3000;
+    const PORT = 3001;
 
     app.get("/", (req, res) => {
       res.status(200).json({
