# src/models/event.model.ts
@@ -1,5 +1,7 @@
 import mongoose, { ObjectId } from "mongoose";
-import * as Yup from 'yup';
+import * as Yup from "yup";
+
+export const EVENT_MODEL_NAME = "Event";
 
 const Schema = mongoose.Schema;
 
@@ -17,84 +19,96 @@ export const eventDAO = Yup.object({
   createdBy: Yup.string().required(),
   createdAt: Yup.string(),
   updatedAt: Yup.string(),
-  location: Yup.object().required(),
+  location: Yup.object()
+    .shape({
+      region: Yup.number(),
+      coordinates: Yup.array(),
+      address: Yup.string(),
+    })
+    .required(),
 });
 
-export type TEvent = Yup.InferType<typeof eventDAO>
+export type TEvent = Yup.InferType<typeof eventDAO>;
 
 export interface Event extends Omit<TEvent, "category" | "createdBy"> {
   category: ObjectId;
   createdBy: ObjectId;
 }
 
-const EventSchema = new Schema<Event>({
-  name: {
-    type: Schema.Types.String,
-    required: true,
-  },
-  startDate: {
-    type: Schema.Types.String,
-    required: true,
-  },
-  endDate: {
-    type: Schema.Types.String,
-    required: true,
-  },
-  description: {
-    type: Schema.Types.String,
-    required: true,
-  },
-  banner: {
-    type: Schema.Types.String,
-    required: true,
-  },
-  isFeature: {
-    type: Schema.Types.Boolean,
-    required: true,
-  },
-  isOnline: {
-    type: Schema.Types.Boolean,
-    required: true,
-  },
-  isPublish: {
-    type: Schema.Types.Boolean,
-    default: false,
-  },
-  category: {
-    type: Schema.Types.String,
-    required: true,
-    ref: "Category"
-  },
-  slug: {
-    type: Schema.Types.String,
-    unique: true,
-  },
-  createdBy: {
-    type: Schema.Types.ObjectId,
-    required: true,
-    ref: "User"
-  },
-  location: {
-    type: {
-      region: {
-        type: Schema.Types.Number,
+const EventSchema = new Schema<Event>(
+  {
+    name: {
+      type: Schema.Types.String,
+      required: true,
+    },
+    startDate: {
+      type: Schema.Types.String,
+      required: true,
+    },
+    endDate: {
+      type: Schema.Types.String,
+      required: true,
+    },
+    description: {
+      type: Schema.Types.String,
+      required: true,
+    },
+    banner: {
+      type: Schema.Types.String,
+      required: true,
+    },
+    isFeature: {
+      type: Schema.Types.Boolean,
+      required: true,
+    },
+    isOnline: {
+      type: Schema.Types.Boolean,
+      required: true,
+    },
+    isPublish: {
+      type: Schema.Types.Boolean,
+      default: false,
+    },
+    category: {
+      type: Schema.Types.String,
+      required: true,
+      ref: "Category",
+    },
+    slug: {
+      type: Schema.Types.String,
+      unique: true,
+    },
+    createdBy: {
+      type: Schema.Types.ObjectId,
+      required: true,
+      ref: "User",
+    },
+    location: {
+      type: {
+        region: {
+          type: Schema.Types.Number,
+        },
+        coordinates: {
+          type: [Schema.Types.Number],
+          default: [0, 0],
+        },
+        address: {
+          type: Schema.Types.String,
+        },
       },
-      coordinates: {
-        type: [Schema.Types.Number],
-        default: [0, 0],
-      }
-    }
-  }
-}, {
-  timestamps: true,
-})
+    },
+  },
+  {
+    timestamps: true,
+  },
+);
 
-EventSchema.pre("save", function (){
-  if(!this.slug){
+EventSchema.pre("save", function () {
+  if (!this.slug) {
     const slug = this.name.split(" ").join("-").toLowerCase();
-    this.slug = `${slug}`
+    this.slug = `${slug}`;
   }
 });
 
-const eventModel = mongoose.model("Event", EventSchema);
+const eventModel = mongoose.model(EVENT_MODEL_NAME, EventSchema);
 export default eventModel;
