# src/routes/api.ts
@@ -1,39 +1,43 @@
-import express, { Request, Response } from 'express'
-import authController from "../controllers/auth.controller"
+import express, { Request, Response } from "express";
+import authController from "../controllers/auth.controller";
 import authMiddleware from "../middlewares/auth.middleware";
-import aclMiddleware from '../middlewares/acl.middleware';
-import { ROLES } from '../utils/constant';
-import mediaMiddleware from '../middlewares/media.middleware';
-import mediaController from '../controllers/media.controller';
-import categoryController from '../controllers/category.controller';
-import regionController from '../controllers/region.controller';
-import eventController from '../controllers/event.controller';
+import aclMiddleware from "../middlewares/acl.middleware";
+import { ROLES } from "../utils/constant";
+import mediaMiddleware from "../middlewares/media.middleware";
+import mediaController from "../controllers/media.controller";
+import categoryController from "../controllers/category.controller";
+import regionController from "../controllers/region.controller";
+import eventController from "../controllers/event.controller";
+import ticketController from "../controllers/ticket.controller";
 
-const router = express.Router()
+const router = express.Router();
 
+router.post("/auth/register", authController.register);
+router.post("/auth/login", authController.login);
 
-router.post('/auth/register', authController.register);
-router.post('/auth/login', authController.login);
+router.get("/auth/me", authMiddleware, authController.me);
+router.post("/auth/activation", authController.activation);
 
-router.get('/auth/me', authMiddleware, authController.me);
-router.post('/auth/activation', authController.activation);
-
-router.get('/test-acl', [
-  authMiddleware,
-  aclMiddleware([ROLES.ADMIN, ROLES.MEMBER])
-], (req: Request, res: Response) => {
-  res.status(200).json({
-    data: "success",
-    message: "OK"
-  })
-});
+router.get(
+  "/test-acl",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN, ROLES.MEMBER])],
+  (req: Request, res: Response) => {
+    res.status(200).json({
+      data: "success",
+      message: "OK",
+    });
+  },
+);
 
 // Media
-router.post('/media/upload-single', [
-  authMiddleware, 
-  aclMiddleware([ROLES.ADMIN, ROLES.MEMBER]), 
-  mediaMiddleware.single("file")
-], mediaController.single
+router.post(
+  "/media/upload-single",
+  [
+    authMiddleware,
+    aclMiddleware([ROLES.ADMIN, ROLES.MEMBER]),
+    mediaMiddleware.single("file"),
+  ],
+  mediaController.single,
   /*
     #swagger.tags = ['Media']
     #swagger.security = [{
@@ -58,11 +62,14 @@ router.post('/media/upload-single', [
   */
 );
 
-router.post('/media/upload-multiple', [
-  authMiddleware, 
-  aclMiddleware([ROLES.ADMIN, ROLES.MEMBER]), 
-  mediaMiddleware.multiple("files")
-], mediaController.multiple
+router.post(
+  "/media/upload-multiple",
+  [
+    authMiddleware,
+    aclMiddleware([ROLES.ADMIN, ROLES.MEMBER]),
+    mediaMiddleware.multiple("files"),
+  ],
+  mediaController.multiple,
   /*
     #swagger.tags = ['Media']
     #swagger.security = [{
@@ -90,10 +97,10 @@ router.post('/media/upload-multiple', [
   */
 );
 
-router.delete('/media/remove', [
-  authMiddleware, 
-  aclMiddleware([ROLES.ADMIN, ROLES.MEMBER])
-], mediaController.remove
+router.delete(
+  "/media/remove",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN, ROLES.MEMBER])],
+  mediaController.remove,
   /*
     #swagger.tags = ['Media']
     #swagger.security = [{
@@ -109,7 +116,10 @@ router.delete('/media/remove', [
 );
 
 // Category
-router.post('/category', [authMiddleware, aclMiddleware([ROLES.ADMIN])], categoryController.create
+router.post(
+  "/category",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN])],
+  categoryController.create,
   /*
     #swagger.tags = ['Category']
     #swagger.security = [{
@@ -123,17 +133,24 @@ router.post('/category', [authMiddleware, aclMiddleware([ROLES.ADMIN])], categor
     }
   */
 );
-router.get('/category', categoryController.findAll
+router.get(
+  "/category",
+  categoryController.findAll,
   /*
     #swagger.tags = ['Category']
   */
 );
-router.get('/category/:id', categoryController.findOne
+router.get(
+  "/category/:id",
+  categoryController.findOne,
   /*
     #swagger.tags = ['Category']
   */
 );
-router.put('/category/:id', [authMiddleware, aclMiddleware([ROLES.ADMIN])], categoryController.update
+router.put(
+  "/category/:id",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN])],
+  categoryController.update,
   /*
     #swagger.tags = ['Category']
     #swagger.security = [{
@@ -147,7 +164,10 @@ router.put('/category/:id', [authMiddleware, aclMiddleware([ROLES.ADMIN])], cate
     }
   */
 );
-router.delete('/category/:id', [authMiddleware, aclMiddleware([ROLES.ADMIN])], categoryController.remove
+router.delete(
+  "/category/:id",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN])],
+  categoryController.remove,
   /*
     #swagger.tags = ['Category']
     #swagger.security = [{
@@ -157,39 +177,54 @@ router.delete('/category/:id', [authMiddleware, aclMiddleware([ROLES.ADMIN])], c
 );
 
 // Region
-router.get('/regions', regionController.getAllProvinces
+router.get(
+  "/regions",
+  regionController.getAllProvinces,
   /*
     #swagger.tags = ['Regions']
   */
 );
-router.get('/regions/:id/province', regionController.getProvince
+router.get(
+  "/regions/:id/province",
+  regionController.getProvince,
   /*
     #swagger.tags = ['Regions']
   */
 );
-router.get('/regions/:id/regency', regionController.getRegency
+router.get(
+  "/regions/:id/regency",
+  regionController.getRegency,
   /*
     #swagger.tags = ['Regions']
   */
 );
-router.get('/regions/:id/district', regionController.getDistrict
+router.get(
+  "/regions/:id/district",
+  regionController.getDistrict,
   /*
     #swagger.tags = ['Regions']
   */
 );
-router.get('/regions/:id/village', regionController.getVillage
+router.get(
+  "/regions/:id/village",
+  regionController.getVillage,
   /*
     #swagger.tags = ['Regions']
   */
 );
-router.get('/region-search', regionController.findByCity
+router.get(
+  "/regions-search",
+  regionController.findByCity,
   /*
     #swagger.tags = ['Regions']
   */
 );
 
 // Event
-router.post('/events', [authMiddleware, aclMiddleware([ROLES.ADMIN])], eventController.create
+router.post(
+  "/events",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN])],
+  eventController.create,
   /*
     #swagger.tags = ['Events']
     #swagger.security = [{
@@ -203,17 +238,24 @@ router.post('/events', [authMiddleware, aclMiddleware([ROLES.ADMIN])], eventCont
     }
   */
 );
-router.get('/events', eventController.findAll
+router.get(
+  "/events",
+  eventController.findAll,
   /*
     #swagger.tags = ['Events']
   */
 );
-router.get('/events/:id', eventController.findOne
+router.get(
+  "/events/:id",
+  eventController.findOne,
   /*
     #swagger.tags = ['Events']
   */
 );
-router.put('/events/:id', [authMiddleware, aclMiddleware([ROLES.ADMIN])], eventController.update
+router.put(
+  "/events/:id",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN])],
+  eventController.update,
   /*
     #swagger.tags = ['Events']
     #swagger.security = [{
@@ -227,7 +269,10 @@ router.put('/events/:id', [authMiddleware, aclMiddleware([ROLES.ADMIN])], eventC
     }
   */
 );
-router.delete('/events/:id', [authMiddleware, aclMiddleware([ROLES.ADMIN])], eventController.remove
+router.delete(
+  "/events/:id",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN])],
+  eventController.remove,
   /*
     #swagger.tags = ['Events']
      #swagger.security = [{
@@ -235,11 +280,31 @@ router.delete('/events/:id', [authMiddleware, aclMiddleware([ROLES.ADMIN])], eve
     }]
   */
 );
-router.get('/events/:slug/slug', eventController.findOneBySlug
+router.get(
+  "/events/:slug/slug",
+  eventController.findOneBySlug,
   /*
     #swagger.tags = ['Events']
   */
 );
-
+// SAMPE SINI 16:05
+router.post(
+  "/tickets",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN])],
+  ticketController.create,
+);
+router.get("/tickets", ticketController.findAll);
+router.get("/tickets/:id", ticketController.findOne);
+router.put(
+  "/tickets/:id",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN])],
+  ticketController.update,
+);
+router.delete(
+  "/tickets/:id",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN])],
+  ticketController.remove,
+);
+router.get("/tickets/:eventId/events", ticketController.findAllByEvent);
 
 export default router;
